updated contest template after yeghiazaryan cup 2020

--- a/problems/practice-sum/statement.en.tex
+++ b/problems/practice-sum/statement.en.tex
@@ -1,4 +1,5 @@
-\problemname{Sum}
+\problemname[stdin/stdout]{Sum}
+
 
 You are given two space-separated integers.
 The integers are not larger than $10^9$ in absolute value.
